--- a/index.html
+++ b/index.html
@@ -121,29 +121,43 @@
       <li>
         <div class="timeline-content">
           <h3 class="date">20th may, 2010</h3>
-          <h1>Heading 1</h1>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur tempora ab laudantium voluptatibus aut eos placeat laborum, quibusdam exercitationem labore.</p>
+          <h1 style="border-bottom: .1px solid rgba(255, 255, 255, 0.368);padding-bottom: 10px;">Editing</h1>
+          <p>
+            Photography <br>
+            Adobe photoshop <br>
+            Adobe After effects <br>
+            Adobe Photoshop 
+          </p>
+        </div>
+      </li>
+      <li>
+        <div class="timeline-content">
+          <h3 class="date" >20th may, 2010</h3>
+          <h1 style="border-bottom: .1px solid rgba(255, 255, 255, 0.368);padding-bottom: 10px;">Programming</h1>
+          <p>Python <br>
+            MATLAB <br>
+            c programming <br>
+            Front-End Development </p>
         </div>
       </li>
       <li>
         <div class="timeline-content">
           <h3 class="date">20th may, 2010</h3>
-          <h1>Heading 2</h1>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur tempora ab laudantium voluptatibus aut eos placeat laborum, quibusdam exercitationem labore.</p>
+          <h1 style="border-bottom: .1px solid rgba(255, 255, 255, 0.368);padding-bottom: 10px;">Artificial Intelligence</h1>
+          <p>Neural Networks <br>
+            Deepleaning <br>
+            Open CV2</p>
         </div>
       </li>
       <li>
         <div class="timeline-content">
           <h3 class="date">20th may, 2010</h3>
-          <h1>Heading 3</h1>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur tempora ab laudantium voluptatibus aut eos placeat laborum, quibusdam exercitationem labore.</p>
-        </div>
-      </li>
-      <li>
-        <div class="timeline-content">
-          <h3 class="date">20th may, 2010</h3>
-          <h1>Heading 4</h1>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur tempora ab laudantium voluptatibus aut eos placeat laborum, quibusdam exercitationem labore.</p>
+          <h1 style="border-bottom: .1px solid rgba(255, 255, 255, 0.368);padding-bottom: 10px;">Tinternet of Things</h1>
+          <p>Sensor Integration <br>
+            IoT Development <br>
+            Node-red <br>
+            Mosquitto-MQTT
+            </p>
         </div>
       </li>
     </ul>
